<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>janilla-conduit</artifactId>
	<parent>
		<groupId>com.janilla</groupId>
		<artifactId>janilla</artifactId>
		<version>${revision}</version>
		<relativePath>../..</relativePath>
	</parent>
	<packaging>pom</packaging>
	<modules>
		<module>backend</module>
		<module>base</module>
		<module>frontend</module>
		<module>fullstack</module>
		<module>test</module>
	</modules>
	<properties>
		<maven.compiler.parameters>true</maven.compiler.parameters>
		<maven.compiler.release>25</maven.compiler.release>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<build>
		<sourceDirectory>./source</sourceDirectory>
		<resources>
			<resource>
				<directory>source</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
		</resources>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>exec-maven-plugin</artifactId>
					<version>3.6.3</version>
					<executions>
						<execution>
							<goals>
								<goal>exec</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<name>janilla-conduit</name>
	<description>Janilla Conduit</description>
	<licenses>
		<license>
			<name>MIT</name>
			<url>https://opensource.org/licenses/MIT</url>
		</license>
	</licenses>
	<developers>
		<developer>
			<name>Diego Schivo</name>
			<email>diego.schivo@janilla.com</email>
			<organization>Janilla</organization>
			<organizationUrl>https://janilla.com</organizationUrl>
		</developer>
	</developers>
</project>
